--- a/src/main/resources/view/settingsForm.fxml
+++ b/src/main/resources/view/settingsForm.fxml
@@ -7,61 +7,63 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #f0f4f8;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.culinaryacademy.controller.SettingsFormController">
-    <Text fill="#2d3436" fontSmoothingType="LCD" layoutX="37.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" wrappingWidth="300.0">
+<AnchorPane prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.culinaryacademy.controller.SettingsFormController">
+    <Text fill="#5d20c6" fontSmoothingType="LCD" layoutX="875.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" wrappingWidth="95.0">
         <font>
             <Font name="Arial Bold" size="24.0" />
         </font>
     </Text>
-    <Pane layoutX="40.0" layoutY="100.0" styleClass="pane" stylesheets="@../assets/css/settingsPage.css">
+    <Pane layoutX="36.0" layoutY="274.0" prefHeight="104.0" prefWidth="930.0" styleClass="pane" stylesheets="@../assets/css/settingsPage.css">
         <children>
-            <VBox layoutX="30.0" layoutY="30.0" prefWidth="600.0" spacing="30.0">
-
-                <!-- Email Change Dropdown -->
-                <TitledPane fx:id="titledPaneUsername" expanded="false" styleClass="titledPane" stylesheets="@../assets/css/settingsPage.css" text="Change Username">
-                    <VBox spacing="10.0" style="-fx-padding: 15;">
-                  <VBox spacing="35.0" style="-fx-padding: 10 0;">
-                     <children>
-                              <JFXTextField fx:id="txtCurrentUsername" promptText="Enter current Username" />
-                              <JFXTextField fx:id="txtNewUsername" onKeyReleased="#txtNewUsernameOnKeyReleased" promptText="Enter new Username" />
-                              <JFXTextField fx:id="txtConfirmUsername" promptText="Re-enter new Username" />
-                     </children>
-                  </VBox>
-                        <JFXButton onAction="#btnUsernameChangeOnAction" style="-fx-background-color: #2196f3; -fx-text-fill: white; -fx-border-radius: 5; -fx-background-radius: 5;" text="Change" />
-                    </VBox>
-                    <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                    </font>
-                </TitledPane>
-
-                <!-- Password Change Dropdown -->
-                <TitledPane fx:id="titledPanePassword" expanded="false" styleClass="titledPane" stylesheets="@../assets/css/settingsPage.css" text="Change Password">
-                    <VBox spacing="10.0" style="-fx-padding: 15;">
-                  <VBox spacing="35.0" style="-fx-padding: 10 0;">
-                     <children>
-                              <JFXPasswordField fx:id="txtCurrentPassword" promptText="Enter current password" />
-                              <JFXPasswordField fx:id="txtNewPassword" onKeyReleased="#txtNewPasswordOnKeyReleased" promptText="Enter new password" />
-                              <JFXPasswordField fx:id="txtConfirmPassword" promptText="Re-enter new password" />
-                     </children>
-                  </VBox>
-                        <JFXButton onAction="#btnPWChangeOnAction" style="-fx-background-color: #ff5722; -fx-text-fill: white; -fx-border-radius: 5; -fx-background-radius: 5;" text="Change" />
-                    </VBox>
-                    <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                    </font>
-                </TitledPane>
-
-            </VBox>
+         <HBox layoutX="20.0" layoutY="23.0">
+            <children>
+   
+                      <!-- Password Change Dropdown -->
+                   <TitledPane fx:id="titledPanePassword" expanded="false" prefHeight="39.0" prefWidth="425.0" styleClass="titledPane" stylesheets="@../assets/css/settingsPage.css" text="Change Password">
+                       <VBox spacing="10.0" style="-fx-padding: 15;">
+                     <VBox spacing="35.0" style="-fx-padding: 10 0;">
+                        <children>
+                                 <JFXPasswordField fx:id="txtCurrentPassword" promptText="Enter current password" />
+                                 <JFXPasswordField fx:id="txtNewPassword" onKeyReleased="#txtNewPasswordOnKeyReleased" promptText="Enter new password" />
+                                 <JFXPasswordField fx:id="txtConfirmPassword" promptText="Re-enter new password" />
+                        </children>
+                     </VBox>
+                           <JFXButton onAction="#btnPWChangeOnAction" style="-fx-background-color: #ff5722; -fx-text-fill: white; -fx-border-radius: 5; -fx-background-radius: 5;" text="Change" />
+                       </VBox>
+                       <font>
+                           <Font name="Segoe UI Bold" size="12.0" />
+                       </font>
+                   </TitledPane>
+      
+                         <!-- Email Change Dropdown -->
+                   <TitledPane fx:id="titledPaneUsername" expanded="false" opacity="0.81" prefHeight="39.0" prefWidth="418.0" styleClass="titledPane" stylesheets="@../assets/css/settingsPage.css" text="Change Username">
+                       <VBox spacing="10.0" style="-fx-padding: 15;">
+                     <VBox spacing="35.0" style="-fx-padding: 10 0;">
+                        <children>
+                                 <JFXTextField fx:id="txtCurrentUsername" promptText="Enter current Username" />
+                                 <JFXTextField fx:id="txtNewUsername" onKeyReleased="#txtNewUsernameOnKeyReleased" promptText="Enter new Username" />
+                                 <JFXTextField fx:id="txtConfirmUsername" promptText="Re-enter new Username" />
+                        </children>
+                     </VBox>
+                           <JFXButton onAction="#btnUsernameChangeOnAction" style="-fx-background-color: #2196f3; -fx-text-fill: white; -fx-border-radius: 5; -fx-background-radius: 5;" text="Change" />
+                       </VBox>
+                       <font>
+                           <Font name="Segoe UI Bold" size="12.0" />
+                       </font>
+                   </TitledPane>
+            </children>
+         </HBox>
         </children>
     </Pane>
-   <ImageView fitHeight="389.0" fitWidth="380.0" layoutX="620.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fitHeight="274.0" fitWidth="268.0" layoutX="366.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@../assets/images/settings_bg.png" />
+         <Image url="@../assets/images/20824340_6374585.jpg" />
       </image>
    </ImageView>
 </AnchorPane>
